--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1>DAW2 os desea FELIZ NAVIDAD!</h1>
     <div class="tree" id="tree"></div>
     <div id="balls" class="balls"></div>
+    <div id="balls2" class="balls2"></div>
 </body>
 
 </html>
